@@ -50,3 +50,11 @@ showforms
 submit
 show
 find "NAMETEST: ==item_a=="
+
+###
+
+formaction 1 http://localhost:8080/testformaction
+fv 1 selecttest value1
+fv 1 item test
+submit
+find "==item AND selecttest=="
